--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-table": "^1.22.1",
     "dfx-bootstrap-table": "1.3",
+    "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
