--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,9 +1,18 @@
 version: '3'
 
+env:
+  GOOSE_DRIVER: mysql
+  GOOSE_DBSTRING: "root:bwizard@/bwizard"
+
 tasks:
   setup:
     cmds:
       - go install github.com/deepmap/oapi-codegen/v2/cmd/oapi-codegen@latest
+      - go install github.com/pressly/goose/v3/cmd/goose@latest
+  migrations-create:
+    cmd: goose -dir ./migrations create {{.CLI_ARGS}} sql
+  migrations-migrate:
+    cmd: goose -dir ./migrations up
   gen-http:
     cmds:
       - oapi-codegen -package wizard -generate types,server ./api/openapi/wizard/wizard.yml > ./api/openapi/wizard/wizard.gen.go
